--- a/thesis/0-ref-lib.bib
+++ b/thesis/0-ref-lib.bib
@@ -216,3 +216,15 @@ urldate = {05-08-22}
   institution={FAU Discussion Papers in Economics}
 }
 
+@article{tibshirani1996regression,
+  title={Regression shrinkage and selection via the lasso},
+  author={Tibshirani, Robert},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={58},
+  number={1},
+  pages={267--288},
+  year={1996},
+  publisher={Wiley Online Library}
+}
+
+
